# demo-maze

./: README.md  demo-gen-maze.cabal  demo-maze.cabal
app/: Main.hs
src/: Maze.hs
src/Maze/: Space.hs
