name:                demo-gen-maze
version:             0.1
synopsis:            Рекурсивная генерация лабиринтов.
-- description:
homepage:            https://github.com/cmc-haskell-2017/demo-gen-maze#readme
license:             MIT
license-file:        LICENSE
author:              Nickolay Kudasov
maintainer:          nickolay.kudasov@gmail.com
copyright:           2017 Nickolay Kudasov
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Maze
    Maze.Space
  ghc-options:         -Wall -fno-warn-type-defaults
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , random
  default-language:    Haskell2010

executable demo-gen-maze
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , demo-gen-maze
                     , random
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cmc-haskell-2017/demo-gen-maze
